add get mock requests
